使用request.js获取网页内容
之前使用的JSDOM.fromURL某些情况下会长时间挂起连接，导致promise一直处于pending状态，现在改用request.js获取网页内容

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "download": "^6.2.5",
-    "jsdom": "^11.3.0"
+    "jsdom": "^11.3.0",
+    "request": "^2.83.0"
   }
 }
