--- a/config.yml
+++ b/config.yml
@@ -15,6 +15,8 @@ download:
   # 该选项仅在登录账号后有效
   original: false
 
+  # 用户代理字符串
+  userAgent: 'Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.75 Safari/537.36'
 
 login:
 
