--- a/config.yml
+++ b/config.yml
@@ -4,10 +4,9 @@ download:
   # 建议根据网络情况设置为 3-5 之间
   threads: 3
 
-  # 未实现
   # 图片下载失败后的重试次数
-  # 重试也会消耗配额，建议设置为 1
-  retries: 1
+  # 重试可能会消耗配额，建议设置为 3
+  retries: 3
 
   # 未实现
   # 原图存在时是否下载原图
