配置中的字符串统一双引号

--- a/config.yml
+++ b/config.yml
@@ -20,7 +20,7 @@ download:
   original: false
 
   # 用户代理字符串
-  userAgent: 'Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.75 Safari/537.36'
+  userAgent: "Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.75 Safari/537.36"
 
 login:
 
