--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deep-assign": "^2.0.0",
     "js-yaml": "^3.10.0",
     "jsdom": "^11.3.0",
+    "mkdirp": "^0.5.1",
     "request": "^2.83.0"
   }
 }
