初步实现通过配置cookie登录

--- a/config.yml
+++ b/config.yml
@@ -28,13 +28,9 @@ download:
 
 login:
 
-  # 未实现
-  # 用户名和密码使用英文双引号包裹
-  # 如果不登陆，英文双引号内留空
-  # 有两个特殊的英文符号 " 和 \ 需要使用 \ 转义
-
-  # 用户名
-  username: ""
-
-  # 密码
-  password: ""
+  # 在浏览器登录后获取以下三个cookie字段的值并填入下方
+  # 当以下三个值都不为空时会自动登录并验证是否登录成功
+  # 如果登录验证失败会发出警告并直接退出程序
+  __cfduid: ""
+  ipb_member_id: ""
+  ipb_pass_hash: ""
