初步实现登录及原图下载

--- a/config.yml
+++ b/config.yml
@@ -15,8 +15,8 @@ download:
 
   # 未实现
   # 原图存在时是否下载原图
-  # 下载原图会消耗大量配额，所以默认为 false
-  # 该选项仅在登录账号后有效
+  # 下载原图会消耗大量配额，默认为 false
+  # 该选项仅在登录账号后可以设置为 true ，否则程序会发出警告并直接退出
   original: false
 
   # 是否使用日文标题创建文件夹，为 false 时使用主标题
@@ -29,7 +29,7 @@ download:
 login:
 
   # 在浏览器登录后获取以下三个cookie字段的值并填入下方
-  # 当以下三个值都不为空时会自动登录并验证是否登录成功
+  # 当以下三个字段都不为空时会自动登录并验证是否登录成功
   # 如果登录验证失败会发出警告并直接退出程序
   __cfduid: ""
   ipb_member_id: ""
