不将携带登录信息的Cookie发送到下载服务器
下载地址不是E站地址，下载服务器并不需要用到E站的登录信息Cookie。之前的实现会将包含登录信息的Cookie发送到下载地址的服务器。

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "chocolatl",
   "license": "MIT",
   "dependencies": {
+    "clone-deep": "^2.0.1",
     "deep-assign": "^2.0.0",
     "js-yaml": "^3.10.0",
     "jsdom": "^11.3.0",
