--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsdom": "^11.3.0",
     "mkdirp": "^0.5.1",
     "request": "^2.83.0",
-    "sanitize-filename": "^1.6.1"
+    "sanitize-filename": "^1.6.1",
+    "socks-proxy-agent": "^3.0.1"
   }
 }
