--- a/config.yml
+++ b/config.yml
@@ -22,6 +22,9 @@ download:
   # 有些非法字符会被过滤，所以创建的文件夹标题未必和网页上的一致
   jtitle: true
 
+  # 是否使用图片原文件名，为 false 时图片会被命名为 0.jpg, 1.jpg...
+  originalFileName: false
+
   # 是否保存图片下载进度记录
   # 为 true 时，会在下载目录中创建 download.json 保存进度记录，记录下载成功、未下载、下载失败的项
   # 如果由于下载时进程中断导致存在未下载的项，或由于网络等因素导致存在下载失败的项
