按序号命名文件时根据源文件名确定后缀
之前当选择按序号命名文件（originalFileName为false）时下载的图片后缀被硬编码为“.jpg”，现在会根据源图片名确定后缀

--- a/config.yml
+++ b/config.yml
@@ -22,7 +22,7 @@ download:
   # 有些非法字符会被过滤，所以创建的文件夹标题未必和网页上的一致
   jtitle: true
 
-  # 是否使用图片原文件名，为 false 时图片会被命名为 0.jpg, 1.jpg...
+  # 是否使用图片原文件名，为 false 时图片会按序号命名为 0.jpg, 1.jpg...
   originalFileName: false
 
   # 是否保存图片下载进度记录
