--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "eget": "bin/eget.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
