--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-yaml": "^3.10.0",
     "jsdom": "^11.3.0",
     "mkdirp": "^0.5.1",
+    "opn": "^5.2.0",
     "request": "^2.83.0",
     "sanitize-filename": "^1.6.1",
     "socks-proxy-agent": "^3.0.1"
