添加fileName配置项
- 移除originalFileName配置项目
- 添加fileName配置项
现在可以使用fileName配置项自定义保存图片文件名的格式

--- a/config.yml
+++ b/config.yml
@@ -22,8 +22,19 @@ download:
   # 有些非法字符会被过滤，所以创建的文件夹标题未必和网页上的一致
   jtitle: true
 
-  # 是否使用图片原文件名，为 false 时图片会按序号命名为 0.jpg, 1.jpg...
-  originalFileName: false
+  # 保存图片的命名规则
+  # ----
+  # 有一些可用变量
+  #   {jtitle}    - 画廊日文标题，不存在时自动使用 ntitle
+  #   {ntitle}    - 画廊英文标题
+  #   {filename}  - 图片原文件名
+  #   {index.0}   - 按图片在画廊中出现的顺序，从 0 开始的序号
+  #   {index.0.4} - 同上，但会填充前导 0 使序号长度固定为 4
+  #   {index.1}   - 按图片在画廊中出现的顺序，从 1 开始的序号
+  #   {index.1.4} - 同上，但会填充前导 0 使序号长度固定为 4
+  # ----
+  # 有些非法字符会被过滤，所以创建的文件名未必和指定的完全一致
+  fileName: "{jtitle}[{index.0}]"
 
   # 是否保存图片下载进度记录
   # 为 true 时，会在下载目录中创建 download.json 保存进度记录，记录下载成功、未下载、下载失败的项
