--- a/config.yml
+++ b/config.yml
@@ -4,7 +4,6 @@ download:
   # 建议根据网络情况设置为 3-5 之间
   threads: 3
 
-  # 该选项暂不可用
   # 网页/图片下载失败后的重试次数
   # 重试可能会消耗配额，建议设置为 1
   retries: 1
@@ -71,4 +70,4 @@ login:
 
   # 在浏览器成功登录里站(exhentai)后，获取以下cookie的值并填入下方
   # 如果仅是登录下载表站(e-hentai)的Gallery，可以不填写下面的字段
-  igneous: ""
+  igneous: "7d4bc2fd7"
